--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "hompimpa",
+  "name": "boilerplate-react-fullstack",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open --hot",
@@ -49,5 +48,6 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
-  }
+  },
+  "description": ""
 }
