--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "start": "node server.js",
-    "heroku-postbuild": "webpack --mode production"
+    "start": "node server.js"
   },
   "author": "tyo baskara",
   "license": "ISC",
