--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boilerplate-react-fullstack",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
   "engines": {
     "node": "10.8.0"
@@ -10,6 +11,7 @@
     "build": "webpack --mode production",
     "start": "node server.js"
   },
+  "proxy": "http://localhost:5000",
   "author": "tyo baskara",
   "license": "ISC",
   "devDependencies": {
