--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "validator": "^10.5.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "nodemon": "^1.18.3"
   },
   "repository": {
     "type": "git",
