--- a/package.json
+++ b/package.json
@@ -26,7 +26,18 @@
     "mongoose": "^5.2.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^10.5.0"
+    "validator": "^10.5.0",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3",
