--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mongoose": "^5.2.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^10.5.0",
+    "validator": "^10.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
