--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,7 @@
 {
   "name": "client",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "start": "node server.js"
-  },
-  "proxy": "http://localhost:5000",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -47,6 +41,10 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
-  "main": "server.js",
-  "license": "ISC"
+  "scripts": {
+    "dev": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
+    "start": "node server.js"
+  },
+  "proxy": "http://localhost:5000"
 }
